fix SQL injection, trigger OOM, client churn, DDL detection, and emulator config